# django-polled

./: LICENSE  MANIFEST.in  README.md  README.srt  setup.cfg
django_polled.egg-info/: PKG-INFO  SOURCES.txt
docs/: REFERENCE.rst  REFERENCE.srt
src/django_polled_edchelstephens.egg-info/: PKG-INFO  SOURCES.txt
