[metadata]
name = django-polled
version = 0.1.0
description = A Django app to for Web-based polls.
long_description = file: README.srt
url = https://test.pypi.org/
author = Edchel Stephen Nini
author_email = edchelstephens@gmail.com
license = BSD-3-Clause
classifiers = 
    ENVIRONMENT :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.1
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find: