[metadata]
name = django-polled-edchelstephens
version = 0.1.1
description = A Django app for Web-based polls.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/edchelstephens/django-polled
project_urls =
    Bug Tracker = https://github.com/edchelstephens/django-polled/issues
author = Edchel Stephen Nini
author_email = edchelstephens@gmail.com
license = BSD-3-Clause  
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.1
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
package_dir = 
    = src
include_package_data = true
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src